<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.AreaSettingsActivity"
                android:paddingTop="16dp">

    <RelativeLayout
        android:id="@+id/area_setting_name_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/area_setting_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/area_name"
            android:layout_alignBottom="@+id/area_name"
            android:layout_alignParentStart="true"
            android:text="@string/activity_areaSettings_prop_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/area_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/area_setting_name_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/area_name"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#26000000"/>
    </RelativeLayout>


    <!--wifi-->

    <RelativeLayout
        android:id="@+id/area_setting_wifi_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/area_setting_name_container"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/area_setting_wifi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/activity_areaSettings_prop_wifiMonitor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"/>


        <TextView
            android:id="@+id/area_setting_wifi_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/area_setting_wifi_label"
            android:layout_marginRight="60dp"
            android:layout_toStartOf="@+id/area_setting_wifi"
            android:text="@string/activity_areaSettings_prop_wifi_summary"
            android:textAppearance="?android:attr/textAppearanceSmall"/>


        <Switch
            android:id="@+id/area_setting_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/area_setting_wifi_summary"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/area_setting_wifi_label"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/area_setting_wifi"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#26000000"/>

    </RelativeLayout>

    <!--radius-->

    <RelativeLayout
        android:id="@+id/area_setting_radius_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/area_setting_wifi_container"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/area_setting_radius_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/activity_areaSettings_prop_radius"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/area_setting_radius_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/area_setting_radius_label"
            android:layout_marginRight="60dp"
            android:text="@string/activity_areaSettings_prop_radius_summary"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/area_setting_radius_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/area_setting_radius_summary"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <SeekBar
            android:id="@+id/area_setting_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/area_setting_radius_value"
            android:max="300"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/area_setting_radius"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#26000000"/>

    </RelativeLayout>


    <!--enabled-->


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/area_setting_radius_container"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/area_setting_enabled_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/activity_areaSettings_prop_enabled"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"/>

        <Switch
            android:id="@+id/area_setting_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/area_setting_enabled_label"
            android:checked="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/area_setting_enabled"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#26000000"/>
    </RelativeLayout>


    <!--ic_delete-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/deleteAreaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:baselineAlignBottom="true"
        android:onClick="deleteArea"
        android:src="@drawable/ic_delete"
        app:backgroundTint="@android:color/holo_red_dark"/>

    <!--save-->


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:baselineAlignBottom="true"
        android:onClick="save"
        android:src="@drawable/ic_done_24dp"/>


</RelativeLayout>
